<resources>
    <string name="app_name">p5TicTacToe</string>

    <string name="HomeTile">Tic Toc Toe </string>
    <string name="playBuuton">Play</string>
    <string name="PlayerSetupTitle">Enter Your Name</string>
    <string name="Lable1">Player1</string>
    <string name="lable2">Player2</string>
    <string name="submitButton">Submit Names</string>
    <string name="nameHint">Enter Your Name</string>

    <string name="playAgainButton">Play Again</string>
    <string name="homeButton">Home</string>
</resources>